# otus_rust_homeworks

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint-cli-bank.yml  lint-cli.yml  lint-cli_hw.yml  lint-cli_hw2.yml  lint-cli_hw3.yml  lint-cli_hw4.yml  lint-cli_hw5.yml
docs/: Practice_1.md  hw1.md  hw10.md  hw11.md  hw12.md  hw13.md  hw14.md  hw15.md  hw2.md  hw3.md  hw4.md  hw5.md  hw6.md  hw7.md  hw8.md  hw9.md
homeworks/hw10/: Cargo.toml
homeworks/hw10/src/: lib.rs  main.rs
homeworks/hw11/: Cargo.toml
homeworks/hw11/src/: lib.rs  main.rs
homeworks/hw12/: Cargo.toml
homeworks/hw12/src/: bank.rs  main.rs
homeworks/hw1[345]/client/: Cargo.toml
homeworks/hw1[345]/client/examples/: client_multy_loop.rs  create_account.rs  deposit.rs  get_balance.rs  get_history.rs  get_history_for_account.rs  transfer.rs  withdraw.rs
homeworks/hw1[345]/client/src/: client.rs  lib.rs
homeworks/hw1[345]/server/: Cargo.toml
homeworks/hw1[345]/server/src/: main.rs
homeworks/hw1[345]/shared/: Cargo.toml
homeworks/hw1[345]/shared/src/: constants.rs  errors.rs  lib.rs  models.rs
homeworks/hw2/src/: double_int32.rs  main.rs  tuple_sum.rs
homeworks/hw3/: Cargo.toml
homeworks/hw3/src/ops/: counter_ops.rs  pairs_ops.rs
homeworks/hw4/src/: get_element_from_pair.rs  split_slice_by2.rs
homeworks/hw5/src/ops/: counter_ops.rs  vector_ops.rs
homeworks/hw6/: Cargo.toml
homeworks/hw8/src/: task1.rs  task2.rs
homeworks/hw9/src/: lib.rs
hw1/src/: main.rs
hw2/src/: array_sum.rs  double_float32.rs  double_float64.rs  double_int64.rs  int_plus_float_to_float.rs  int_plus_float_to_int.rs
hw3/src/: main.rs
hw3/src/ops/: mod.rs  vector_ops.rs
hw4/: Cargo.toml
hw4/src/: get_element_from_pair.rs  get_n_element_from_end.rs  get_n_element_from_slice.rs  lib.rs  split_slice_by4.rs
hw5/: Cargo.toml
hw5/src/: main.rs
hw5/src/ops/: counter_ops.rs  mod.rs  pairs_ops.rs
hw6/src/: lib.rs
hw7/: Cargo.toml
hw7/src/: main.rs
hw8/: Cargo.toml
hw8/src/: lib.rs  main.rs  task1.rs  task2.rs
hw8/src/task2/: Cargo.toml
hw8/src/task2/src/: lib.rs
hw9/: Cargo.toml
hw9/src/: main.rs
practice/src/: area.rs  bank.rs  digit_product.rs  fib.rs  fizzbuzz.rs  main.rs  missing_num.rs  storage.rs  uniq_digit.rs  validate_paren.rs  vec2.rs
project/: Readme.md  docker-compose.yaml
project/bot/: Cargo.toml
project/bot/src/: bot_service.rs  config_service.rs  data_service.rs  main.rs
