[workspace]

members = [
    "homeworks/hw1",
    "homeworks/hw2",
    "homeworks/hw3",
    "homeworks/hw4",
    "homeworks/hw5",
    "homeworks/hw6",
    "homeworks/hw7",
    "homeworks/hw8",
    "homeworks/hw9",
    "homeworks/hw10",
    "practice"
]

resolver = "2"


[workspace.package]
version = "1.2.3"
authors = ["vasiliev-alexey"]
description = "Rust Developer. Basic"
documentation = "https://github.com/vasiliev-alexey/otus_rust_homeworks"
license = "MIT"
edition = "2021"
rust-version = "1.72.0"
homepage = "https://github.com/vasiliev-alexey/otus_rust_homeworks"
repository = "https://github.com/vasiliev-alexey/otus_rust_homeworks"
readme = "README.md"
keywords = ["rust", "homeworks"]
