[package]
name = "otus_schedule_bot"
version = "0.0.1"
edition = "2021"
authors = ["vasiliev-alexey"]



[dependencies]
teloxide = { version = "0.12", features = ["macros", "rand",  "bincode-serializer"] }
log = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
chrono = "0.4"
openssl = { version = "0.10.45", default-features = false, features = ["vendored"] }
openssl-probe = "0.1.5"
rand = "0.8.5"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
url = "2.4.0"
reqwest = "0.11.18"
prettytable-rs = "0.10.0"
thiserror = "1.0.47"
pretty_env_logger = "0.5.0"
scraper = "0.18.1"
config = "0.13.4"

redis = { version = "0.24.0"}