[package]
name = "client"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.107", features = [] }
serde = "1.0.188"
shared = {path = "../shared"}


log = "^0.4.20"
env_logger = "^0.10.0"
thiserror = "1.0.49"
rand = "0.8.5"

